# Physics-projects

./: CMakeLists.txt  LICENSE.md
Diff-eq/: CMakeLists.txt  main.cpp  pendulum.cpp
Differential-eq/: CMakeLists.txt  main.cpp  pendulum.cpp  pendulum.hpp
Double-pendulum/: CMakeLists.txt  glow.frag  main.cpp  pendulum.cpp  pendulum.hpp
Elastic-collision/: CMakeLists.txt
FFT/: CMakeLists.txt
Fourier-transform/: CMakeLists.txt  bg.frag  main.cpp  transform.cpp  transform.hpp
Gravitational-potential/: CMakeLists.txt  engine.cpp  engine.hpp  gravity.cpp  gravity.hpp  main.cpp  sphere.frag
Laser-simulation/: CMakeLists.txt
Mandelbrot-set/: CMakeLists.txt  main.cpp
Physics-exercise/: CMakeLists.txt
Triple-pendulum/: CMakeLists.txt
Wind-tunnel/: CMakeLists.txt  foil.cpp  foil.hpp  lbm.cpp  lbm.hpp  main.cpp
